Incorporated powerstat measurement into experiment runs